--- a/.github/workflows/demoactions.yml
+++ b/.github/workflows/demoactions.yml
@@ -5,19 +5,31 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10.14]
+        python-version: ["3.10"]
     steps:
       - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "The workflow is now ready to test your code on the runner."
       - name: List files in the repository
-        run: ls -r ${{ github.workspace }}
+        run: find ${{ github.workspace }} -type f -name "*.py" -o -name "*.txt" -o -name "*.md" | head -20
       - run: echo "This job's status is ${{ job.status }}."
-      - name: Install dep
-        run: pip3 install --no-cache-dir -r mlops_lab3/requirements.txt
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f mlops_lab3/requirements.txt ]; then
+            pip install -r mlops_lab3/requirements.txt
+          else
+            pip install matplotlib scikit-learn
+          fi
       - name: Run experiment
         run: python plot_digits_classfication.py 
