--- a/.github/workflows/demoactions.yml
+++ b/.github/workflows/demoactions.yml
@@ -14,22 +14,36 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: find ${{ github.workspace }} -type f -name "*.py" -o -name "*.txt" -o -name "*.md" | head -20
-      - run: echo "This job's status is ${{ job.status }}."
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
+          echo "Python files:"
+          find . -name "*.py" | head -10
+      - run: echo "This job's status is ${{ job.status }}."
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f mlops_lab3/requirements.txt ]; then
-            pip install -r mlops_lab3/requirements.txt
-          else
-            pip install matplotlib scikit-learn
-          fi
+          echo "Installing matplotlib and scikit-learn directly"
+          pip install matplotlib scikit-learn
       - name: Run experiment
-        run: python plot_digits_classfication.py 
+        run: |
+          echo "Current working directory: $(pwd)"
+          echo "Looking for Python script..."
+          ls -la *.py || echo "No Python files in current directory"
+          if [ -f "plot_digits_classfication.py" ]; then
+            echo "Running plot_digits_classfication.py"
+            python plot_digits_classfication.py
+          elif [ -f "../plot_digits_classfication.py" ]; then
+            echo "Running ../plot_digits_classfication.py"
+            python ../plot_digits_classfication.py
+          else
+            echo "Script not found, searching for it..."
+            find . -name "plot_digits_classfication.py" -exec python {} \; 
